# axon

./: .gitignore  CMakeLists.txt  Makefile
docs/: style_guide.md
examples/: CMakeLists.txt  ping_pong.cpp
include/axon/: axon.hpp  error.hpp  node.hpp  publisher.hpp  shared_state.hpp  subscriber.hpp
include/axon/platform/: clock.hpp  cpu.hpp  memory.hpp
include/axon/shm/: shm_allocator.hpp  shm_segment.hpp
include/axon/sync/: atomic_queue.hpp  notifier.hpp  seqlock.hpp  spinlock.hpp
include/axon/transport/: channel.hpp  chunk.hpp  registry.hpp
src/: node.cpp
src/platform/: cpu.cpp
src/shm/: shm_segment.cpp
src/transport/: registry.cpp
tests/: CMakeLists.txt  test_atomic_queue.cpp  test_channel.cpp  test_shm_allocator.cpp
